# function_vectors

./: README.md  experiments.py  pyproject.toml  runner.sh
notebooks/: function_vector.py  task_vector_separator.py
src/function_vectors/: function_vector.py  main.py  task_vectors.py  tools.py
src/function_vectors/datasets/: __init__.py  antonyms.py  capitalize.py  in_context_learning.py  loader.py  pig_latin.py  translation.py
