[project]
name = "function_vectors"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francisco Piedrahita Velez", email = "fpiedrah@brown.edu"},
]
dependencies = [
    "transformers>=4.44.2",
    "nnsight>=0.3.5",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
